# wispy

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  audio.py  config.py  config.yaml  hotwords.txt  model_fetch.py  paths.py  pyproject.toml  requirements.txt  transcribe.py  wispy.py
.github/: AGENT_BRIEFING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-dispatcher.yml  claude-review.yml  release-cuda.yml  release.yml
src/wispy/: __init__.py  __main__.py  config.py  cuda_loader.py  download.py  feedback.py  gpu_detect.py  hotkey.py  main.py  model_fetch.py  output.py  paths.py  transcribe.py  updater.py
tests/: conftest.py
tests/architecture/: test_bundle_architecture.py  test_module_graph.py  test_swap_whitelist.py  test_workflows.py
tests/unit/: test_config.py  test_cuda_loader.py  test_download.py  test_extract_release_notes.py  test_gpu_detect.py  test_model_fetch.py  test_paths.py  test_updater.py  test_updater_dual_stream.py
