[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wispy"
version = "0.1.0"
description = "Minimal local push-to-talk dictation tool for Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.9.0",
    "PyYAML>=6.0",
    "huggingface_hub>=0.23.0",
]

[project.scripts]
wispy = "wispy.main:main"

[tool.setuptools.packages.find]
where = ["src"]
