[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wispy"
version = "0.4.3"
description = "Minimal local push-to-talk dictation tool for Windows"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Michael Kagel" },
]
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.9.0",
    "PyYAML>=6.0",
    "huggingface_hub>=0.23.0",
    "packaging>=21.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[project.scripts]
wispy = "wispy.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "windows_only: tests that require Windows runtime (audio, hotkeys, clipboard, winsound)",
    "integration: integration tests that exercise multiple modules together",
    "architecture: architecture-level tests (module graph, doc/code sync)",
]
